Define websocket types and use type definitions at client side
